setup globalExceptionHandler and refacto MessageController, MessageService